@@ -121,6 +121,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25659: In ctypes, prevent a crash calling the from_buffer() and
+  from_buffer_copy() methods on abstract classes like Array.
+
 - Issue #28732: Fix crash in os.spawnv() with no elements in args
 
 - Issue #28485: Always raise ValueError for negative
